[refactor] 절약 목표 API 리팩토링