@@ -2,52 +2,50 @@ package com.sunny.backend.dto.response.consumption;
 
 
 import com.sunny.backend.entity.*;
-import lombok.Getter;
-
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Getter
-public class ConsumptionResponse {
+public record ConsumptionResponse(
 
-    private Long id;
-    private String name;
-    private SpendType category;
-    private Long money;
-    private LocalDate dateField;
+    Long id,
+    String name,
+    SpendType category,
+    Long money,
+    LocalDate dateField
+) {
 
-    public ConsumptionResponse(Consumption consumption) {
-        this.id = consumption.getId();
-        this.name = consumption.getUsers().getName();
-        this.category = consumption.getCategory();
-        this.money = consumption.getMoney();
-        this.dateField = consumption.getDateField();
+    public static ConsumptionResponse from(Consumption consumption) {
+        return new ConsumptionResponse(
+            consumption.getId(),
+            consumption.getName(),
+            consumption.getCategory(),
+            consumption.getMoney(),
+            consumption.getDateField()
+        );
     }
 
-    public static List<ConsumptionResponse> fromConsumptions(List<Consumption> consumptions) {
+    public static List<ConsumptionResponse> listFrom(List<Consumption> consumptions) {
         return consumptions.stream()
-                .map(ConsumptionResponse::new)
-                .collect(Collectors.toList());
+            .map(ConsumptionResponse::from)
+            .toList();
     }
 
-    @Getter
-    public static class DetailConsumption {
+    public record DetailConsumptionResponse(
+        String name,
+        Long money
+    ) {
 
-        private String name;
-        private Long money;
-
-        public DetailConsumption(Consumption consumption) {
-            this.name = consumption.getUsers().getName();
-            this.money = consumption.getMoney();
+        public static DetailConsumptionResponse from(Consumption consumption) {
+            return new DetailConsumptionResponse(
+                consumption.getName(),
+                consumption.getMoney()
+            );
         }
 
-        public static List<ConsumptionResponse.DetailConsumption> fromDetailConsumptions(
-            List<Consumption> consumptions) {
+        public static List<DetailConsumptionResponse> listFrom(List<Consumption> consumptions) {
             return consumptions.stream()
-                .map(ConsumptionResponse.DetailConsumption::new)
-                .collect(Collectors.toList());
+                .map(DetailConsumptionResponse::from)
+                .toList();
         }
     }
 }
-
